--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,292 +1,177 @@
-.navbar_frame {
-  position: relative;
-  width: 100%;
-  height: 145px;
-
-  display: flex;
-  justify-content: center;
-
-  background: #443297;
-}
-
-.container {
-  position: relative;
-  width: 1320px;
-  padding: 20px 0px 14px;
-  height: auto;
+.home_page {
   display: flex;
   flex-direction: column;
 }
 
-.navbar_top {
+.header_frame {
+  position: relative;
+  margin-top: 47px;
   width: 100%;
-  height: 50px;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.navbar_top > a img {
-  margin-right: 76px;
-  width: 117px;
-  height: 36px;
-}
-
-.navbar_top .nav_search_frame {
-  width: 650px;
-  height: 50px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background: #fff;
-  border-radius: 6px;
-}
-
-.navbar_top .search_box {
-  padding: 10px 17px;
-  width: auto;
   height: auto;
-
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  justify-content: center;
 }
 
-.search_box .category_list {
-  width: 166px;
-  height: 30px;
-
-  display: flex;
+.header_frame .container {
   flex-direction: row;
-  align-items: center;
-
-  border-right: 1px solid #d6d6d6;
 }
 
-.category_list select {
-  width: 140px;
-  height: 30px;
+.container .header_left {
+  position: relative;
+  padding-left: 15px;
+  width: 875px;
+  height: 508px;
 
-  border: none;
-  outline: none;
+  background-color: #0053f6;
+  background-image: url(../images/icons/header_bg.svg);
+}
+
+.header_left .header_content {
+  margin-top: 90px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.header_content div {
+  width: 104px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: #f5c34b;
+  border-radius: 6px;
+
+  margin-left: 20px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.header_content span {
+  margin-top: 10px;
+  width: 428px;
 
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 60px;
+  line-height: 87px;
+  color: #ffffff;
+}
+
+.header_content p {
+  margin-top: 10px;
+
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #ffffff;
+}
+
+.header_content a {
+  margin-top: 20px;
+
+  width: 140px;
+  height: 52px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: #ffffff;
+  border-radius: 6px;
+
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 15px;
   line-height: 22px;
   color: #041e42;
 }
 
-.search_box input {
-  margin-left: 12px;
-  width: 387px;
-  height: 22px;
+.header_content img {
+  position: absolute;
+  right: 10px;
+}
 
-  border: none;
-  outline: none;
+.container .header_right {
+  position: relative;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+.header_right .header_box {
+  width: 422px;
+  height: 240px;
+
+  display: flex;
+  flex-direction: row;
+  background: #F2F2F2;
+  border-radius: 5px;
+}
+
+
+.header_right .box_left{
+  margin-left: 30px;
+  width: 50%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.box_left span{
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 22px;
-  color: #626974;
+  color: #0053F6;
 }
 
-.nav_search_frame .search_icon_box {
-  width: 50px;
-  height: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background: #f5c34b;
-  border-radius: 0px 6px 6px 0px;
-}
-
-.search_icon_box img {
-  width: 20px;
-  height: 20px;
-}
-
-.navbar_top .nav_top_menu {
-  margin-left: 59px;
-  width: 416px;
-  height: 50px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.nav_top_menu .top_menu_box {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  cursor: pointer;
-}
-
-.top_menu_box .box_icon_box {
-  position: relative;
-  margin-right: 16px;
-  width: 54px;
-  height: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border: 1px solid rgba(255, 255, 255, 0.015);
-  border-radius: 6px;
-}
-
-.box_icon_box img {
-  width: 22px;
-  height: 22px;
-}
-
-.top_menu_box .box_info_box {
-  display: flex;
-  flex-direction: column;
-}
-
-.box_info_box span {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 22px;
-  color: #ffffff;
-}
-
-.box_info_box strong {
+.box_left p {
+  margin: 10px 0;
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 22px;
-  color: #ffffff;
-}
+  font-size: 26px;
+  line-height: 38px;
+  color: #041E42;
+} 
 
-.box_icon_box .basket_count {
-  position: absolute;
-  width: 15px;
-  height: 15px;
-
-  top: -2px;
-  right: -3px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f5c34b;
-  border-radius: 50px;
-
+.box_left a {
   font-family: "Jost", sans-serif;
   font-style: normal;
-  font-weight: 700;
-  font-size: 8px;
-  line-height: 14px;
-  color: #0b1e40;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041E42;
 }
 
-.navbar_bott {
-  margin-top: 20px;
+
+.box_left .hover_border {
+  margin-top: 3px;
+  width: 32px;
+  height: 2px;
+  background: #041E42;
+
+}
+
+.header_box .box_right {
+  width: 50%;
+}
+
+
+.box_right img {
   width: 100%;
-  height: 40px;
-
-  display: flex;
-  flex-direction: row;
-
-  border-top: 1px solid #5746a1;
-}
-
-
-.navbar_bott .navbar_bott_menu_box{
-  width: auto;
-  height: auto;
-
-  display: flex;
-  flex-direction: row;
-
-}
-
-.navbar_bott_menu_box .browse_box {
-  margin-top: 10px;
-  width: 185px;
-  height: 32px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-right: 1px solid #5746a1;
-}
-
-.browse_box img {
-  margin-right: 10px;
-  width: 20px;
-  height: 18px;
-}
-
-.browse_box span {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-  color: #ffffff;
-}
-
-
-.navbar_bott_menu_box .navbar_route_menu {
-  margin-top: 10px ;
-  width: 690px;
-  margin-left: 12px;
-  display: flex;
-  flex-direction: row;
-}
-
-.navbar_route_menu .router_menu {
-  margin-right:20px;
-  width: auto;
-  height: 41px;
-
-  display: flex;
-}
-
-
-.router_menu a {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-  color: #ffffff;
-}
-
-.router_menu a.active {
-  color: #f5c34b;
-}
-
-.navbar_bott_menu_box .sorting_menu {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-
-  
-
-}
-
-.sorting_menu span {
-  margin-left: 20px;
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-  text-align: right;
-  color: #ffffff;
+  height: 100%;
 }
