--- a/public/css/home.css
+++ b/public/css/home.css
@@ -37,6 +37,62 @@
   text-transform: capitalize;
 }
 
+/* PEGINATION */
+
+.container .pegination_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .pegination_box  .pegination_main {
+  width: auto;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pegination_main  img {
+  cursor: pointer;
+}
+
+.container .pegination_main .pegination_dot  {
+  margin: 0px 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+
+
+.container .pegination_dot .dot {
+  width: 20px;
+  height: 20px;
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.container .pegination_dot .dot.active {
+  border: 2px solid #112137;
+}
+
+.container .pegination_dot .dot div{
+  width: 4px;
+  height: 4px;
+
+  background: #112137;
+  border-radius: 50%;
+}
+
 .header_frame {
   position: relative;
   margin-top: 47px;
@@ -370,7 +426,7 @@
   flex-direction: column;
 }
 
-.container .product_wrapper {
+.selling_producs_frame .container .product_wrapper {
   margin-top: 30px;
   position: relative;
   width: 100%;
@@ -381,16 +437,17 @@
   justify-content: space-between;
 }
 
-.product_wrapper .next-prev_box {
+.selling_producs_frame .product_wrapper .next-prev_box {
   width: 25px;
 }
 
-.next-prev_box img {
+.selling_producs_frame .next-prev_box img {
+  cursor: pointer;
   position: absolute;
   top: 50%;
 }
 
-.product_wrapper .product_boxes {
+.selling_producs_frame .product_wrapper .product_boxes {
   position: relative;
   width: 1224px;
   height: 452px;
@@ -399,7 +456,7 @@
   flex-direction: row;
 }
 
-.product_boxes .product_box {
+.selling_producs_frame .product_boxes .product_box {
   width: 306px;
   height: auto;
 
@@ -408,12 +465,12 @@
   cursor: pointer;
 }
 
-.product_box .product_image_box {
+.selling_producs_frame .product_box .product_image_box {
   width: 100%;
   height: 280px;
 }
 
-.product_image_box .hover_box {
+.selling_producs_frame .product_image_box .hover_box {
   display: none;
   width: 100%;
   height: 100%;
@@ -423,7 +480,7 @@
   align-items: center;
 }
 
-.hover_box button {
+.selling_producs_frame .hover_box button {
   margin-bottom: 10px;
   width: 260px;
   height: 50px;
@@ -447,18 +504,18 @@
   color: #ffffff;
 }
 
-.product_image_box:hover .hover_box {
+.selling_producs_frame .product_image_box:hover .hover_box {
   display: flex;
 }
 
-.product_box .product_content_box {
+.selling_producs_frame .product_box .product_content_box {
   padding: 5px 22px;
   width: 100%;
   height: auto;
   box-sizing: border-box;
 }
 
-.product_content_box .product_title {
+.selling_producs_frame .product_content_box .product_title {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -468,7 +525,7 @@
   color: #041e42;
 }
 
-.product_content_box .product_desc {
+.selling_producs_frame .product_content_box .product_desc {
   margin-top: 7px;
   height: 56px;
   font-family: "Jost", sans-serif;
@@ -481,7 +538,7 @@
   overflow: hidden;
 }
 
-.product_content_box .review_box {
+.selling_producs_frame .product_content_box .review_box {
   margin-top: 7px;
 
   display: flex;
@@ -489,11 +546,11 @@
   align-items: center;
 }
 
-.review_box img {
+.selling_producs_frame .review_box img {
   margin-right: 5px;
 }
 
-.review_box span {
+.selling_producs_frame .review_box span {
   margin-left: 10px;
   font-family: "Jost", sans-serif;
   font-style: normal;
@@ -503,7 +560,7 @@
   color: #626974;
 }
 
-.product_content_box .price_box {
+.selling_producs_frame .product_content_box .price_box {
   margin-top: 10px;
 
   display: flex;
@@ -511,7 +568,7 @@
   align-items: center;
 }
 
-.price_box strong {
+.selling_producs_frame .price_box strong {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -520,7 +577,7 @@
   color: #041e42;
 }
 
-.price_box span {
+.selling_producs_frame .price_box span {
   margin-left: 10px;
   font-family: "Jost", sans-serif;
   font-style: normal;
@@ -531,4 +588,35 @@
   color: #041e42;
 }
 
+.selling_producs_frame .navbar_frame .product_penigation_box {
+  width: 100%;
+  height: auto;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.selling_producs_frame .product_penigation_box .container {
+  flex-direction: column;
+}
+
+
+.home_page .adv_frame {
+  margin-top: 90px;
+  width: 100%;
+  height: 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+  background-color: #e5edff;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #0053f6;
+}
