--- a/public/css/home.css
+++ b/public/css/home.css
@@ -90,6 +90,13 @@
   border-radius: 50%;
 }
 
+.container .hover_border {
+  margin-top: 3px;
+  width: 32px;
+  height: 2px;
+  background: #041e42;
+}
+
 .header_frame {
   position: relative;
   margin-top: 47px;
@@ -616,64 +623,146 @@
   color: #0053f6;
 }
 
-/* .special_products {
-  margin-top: 60px;
-  width: 100%;
-  height: auto;
+/* SPEC PRODUCT */
 
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.special_products .container {
-  flex-direction: column;
-}
-
-.special_products .container .tepasi {
-  display: flex;
-  justify-content: space-between;
-}
-
-.special_products .container .tepasi span {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 22px;
-  color: #041e42;
-  text-transform: capitalize;
-}
-
-.special_products .container .tepasi strong {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 22px;
-  color: #041e42;
-  text-transform: capitalize;
-}
-
-.special_products .container .tepasi strong:hover {
-  border-bottom: 2px solid #041e42;
-}
-
-.special_products .container .pasi {
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-}
-
-.special_products .container .pasi .chap_desc {
+.home_page .spec_product_frame {
+  margin-top: 90px;
   position: relative;
-  margin-left: 50px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.spec_product_frame .container {
+  flex-direction: column;
+}
+
+.container .spec_product_wrapper {
+  position: relative;
+  margin-top: 35px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.spec_product_wrapper .big_product_box {
+  position: relative;
+  padding: 30px;
+  width: 664px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+
+  background: #f3f5f6;
+  border-radius: 6px;
+}
+
+.big_product_box .big_product_content {
+  margin: 30px;
+  width: 160px;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-} */
+  justify-content: flex-end;
+}
+
+.big_product_content span {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.big_product_content p {
+  margin: 7px 0;
+
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 38px;
+}
+
+.big_product_content a {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.big_product_content img {
+  position: absolute;
+  width: 332px;
+  height: 309px;
+
+  right: 5%;
+}
+
+.spec_product_wrapper .small_product_wrapper {
+  margin-left: 30px;
+
+  width: 620px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.small_product_wrapper .small_product_box {
+  position: relative;
+  padding: 30px;
+  width: 293px;
+  height: 170px;
+
+  display: flex;
+  flex-direction: row;
+
+  box-sizing: border-box;
+  background: #f3f5f6;
+  border-radius: 6px;
+}
+
+.small_product_box:nth-child(odd) {
+  margin-right: 30px;
+}
+
+.small_product_box .small_product_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.small_product_content strong {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.small_product_content span {
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.small_product_box img {
+  position: absolute;
+  right: 30px;
+  top: 40px;
+}
+
+.small_product_box .img1 {
+  position: absolute;
+  top: 70px;
+}
