--- a/public/css/home.css
+++ b/public/css/home.css
@@ -708,7 +708,6 @@
 
 .spec_product_wrapper .small_product_wrapper {
   margin-left: 30px;
-
   width: 620px;
   height: 368px;
 
@@ -733,6 +732,7 @@
 
 .small_product_box:nth-child(odd) {
   margin-right: 30px;
+  margin-bottom: 28px;
 }
 
 .small_product_box .small_product_content {
