--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,7 @@
 }
 
 .category_top a {
+  margin-left: 30px;
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -25,6 +26,11 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.container .category_top div {
+  display: flex;
+  flex-direction: row;
 }
 
 .container .category_top span {
@@ -96,6 +102,123 @@
   height: 2px;
   background: #041e42;
 }
+
+.container .product_wrapper .next-prev_box {
+  width: 25px;
+}
+
+.container .next-prev_box img {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+}
+
+/* PRODUCT CART */
+.container .product_box {
+  width: 306px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.container .product_box .product_image_box {
+  width: 100%;
+  height: 280px;
+}
+
+.container .product_image_box .hover_box {
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container .hover_box button {
+  margin-bottom: 10px;
+  width: 260px;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: none;
+  outline: none;
+
+  background: #0053f6;
+  box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
+  border-radius: 6px;
+
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #ffffff;
+}
+
+.container .product_image_box:hover .hover_box {
+  display: flex;
+}
+
+.container  .product_content_box {
+  padding: 5px 22px;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.container .product_content_box .product_title {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #041e42;
+}
+
+.container .product_content_box .product_desc {
+  margin-top: 7px;
+  height: 56px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #041e42;
+  overflow: hidden;
+}
+
+.container .product_content_box .review_box {
+  margin-top: 7px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .review_box img {
+  margin-right: 5px;
+}
+
+.container .review_box span {
+  margin-left: 10px;
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #626974;
+}
+
+/* HEADER FRAME */
 
 .header_frame {
   position: relative;
@@ -441,16 +564,6 @@
   justify-content: space-between;
 }
 
-.selling_producs_frame .product_wrapper .next-prev_box {
-  width: 25px;
-}
-
-.selling_producs_frame .next-prev_box img {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-}
-
 .selling_producs_frame .product_wrapper .product_boxes {
   position: relative;
   width: 1224px;
@@ -458,110 +571,6 @@
 
   display: flex;
   flex-direction: row;
-}
-
-.selling_producs_frame .product_boxes .product_box {
-  width: 306px;
-  height: auto;
-
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.selling_producs_frame .product_box .product_image_box {
-  width: 100%;
-  height: 280px;
-}
-
-.selling_producs_frame .product_image_box .hover_box {
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.selling_producs_frame .hover_box button {
-  margin-bottom: 10px;
-  width: 260px;
-  height: 50px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  border: none;
-  outline: none;
-
-  background: #0053f6;
-  box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
-  border-radius: 6px;
-
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 22px;
-  color: #ffffff;
-}
-
-.selling_producs_frame .product_image_box:hover .hover_box {
-  display: flex;
-}
-
-.selling_producs_frame .product_box .product_content_box {
-  padding: 5px 22px;
-  width: 100%;
-  height: auto;
-  box-sizing: border-box;
-}
-
-.selling_producs_frame .product_content_box .product_title {
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-  text-transform: uppercase;
-  color: #041e42;
-}
-
-.selling_producs_frame .product_content_box .product_desc {
-  margin-top: 7px;
-  height: 56px;
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 22px;
-  text-transform: uppercase;
-  color: #041e42;
-  overflow: hidden;
-}
-
-.selling_producs_frame .product_content_box .review_box {
-  margin-top: 7px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.selling_producs_frame .review_box img {
-  margin-right: 5px;
-}
-
-.selling_producs_frame .review_box span {
-  margin-left: 10px;
-  font-family: "Jost", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  color: #626974;
 }
 
 .selling_producs_frame .product_content_box .price_box {
@@ -639,7 +648,7 @@
   flex-direction: column;
 }
 
-.container .spec_product_wrapper {
+.spec_product_frame .container .spec_product_wrapper {
   position: relative;
   margin-top: 35px;
   width: 100%;
@@ -649,7 +658,7 @@
   flex-direction: row;
 }
 
-.spec_product_wrapper .big_product_box {
+.spec_product_frame .spec_product_wrapper .big_product_box {
   position: relative;
   padding: 30px;
   width: 664px;
@@ -663,7 +672,7 @@
   border-radius: 6px;
 }
 
-.big_product_box .big_product_content {
+.spec_product_frame .big_product_box .big_product_content {
   margin: 30px;
   width: 160px;
 
@@ -672,7 +681,7 @@
   justify-content: flex-end;
 }
 
-.big_product_content span {
+.spec_product_frame .big_product_content span {
   color: rgb(4, 30, 66);
   font-family: Jost;
   font-size: 15px;
@@ -680,7 +689,7 @@
   line-height: 22px;
 }
 
-.big_product_content p {
+.spec_product_frame .big_product_content p {
   margin: 7px 0;
 
   color: rgb(4, 30, 66);
@@ -690,7 +699,7 @@
   line-height: 38px;
 }
 
-.big_product_content a {
+.spec_product_frame .big_product_content a {
   color: rgb(4, 30, 66);
   font-family: Jost;
   font-size: 15px;
@@ -698,7 +707,7 @@
   line-height: 22px;
 }
 
-.big_product_content img {
+.spec_product_frame .big_product_content img {
   position: absolute;
   width: 332px;
   height: 309px;
@@ -706,7 +715,7 @@
   right: 5%;
 }
 
-.spec_product_wrapper .small_product_wrapper {
+.spec_product_frame .spec_product_wrapper .small_product_wrapper {
   margin-left: 30px;
   width: 620px;
   height: 368px;
@@ -716,7 +725,7 @@
   flex-wrap: wrap;
 }
 
-.small_product_wrapper .small_product_box {
+.spec_product_frame .small_product_wrapper .small_product_box {
   position: relative;
   padding: 30px;
   width: 293px;
@@ -730,17 +739,17 @@
   border-radius: 6px;
 }
 
-.small_product_box:nth-child(odd) {
+.spec_product_frame .small_product_box:nth-child(odd) {
   margin-right: 30px;
   margin-bottom: 28px;
 }
 
-.small_product_box .small_product_content {
+.spec_product_frame .small_product_box .small_product_content {
   display: flex;
   flex-direction: column;
 }
 
-.small_product_content strong {
+.spec_product_frame .small_product_content strong {
   color: rgb(4, 30, 66);
   font-family: Jost;
   font-size: 16px;
@@ -748,7 +757,7 @@
   line-height: 28px;
 }
 
-.small_product_content span {
+.spec_product_frame .small_product_content span {
   color: rgb(98, 105, 116);
   font-family: Jost;
   font-size: 13px;
@@ -756,13 +765,69 @@
   line-height: 22px;
 }
 
-.small_product_box img {
+.spec_product_frame .small_product_box img {
   position: absolute;
   right: 30px;
   top: 40px;
 }
 
-.small_product_box .img1 {
+.spec_product_frame .small_product_box .img1 {
   position: absolute;
   top: 70px;
+}
+
+/* TV FRAME */
+
+.home_page .tv_frame {
+  margin-top: 90px;
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tv_frame .container {
+  flex-direction: column;
+}
+
+.container .tv_wrapper {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+}
+
+.tv_product_box .product_img {
+  width: 100px;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
