--- a/public/css/home.css
+++ b/public/css/home.css
@@ -213,7 +213,7 @@
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 22px;
   color: #626974;
 }
@@ -955,10 +955,19 @@
 .event_product_boxes .event_product_box {
   margin-right: 8px;
   width: 205px;
-  height: 292px;
+  height: 392px;
 
   display: flex;
   flex-direction: column;
   border-radius: 6px;
   background: #ffffff;
+}
+
+.event_product_box .event_product_img {
+  width: 100%;
+  height: 220px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
