--- a/public/css/command.css
+++ b/public/css/command.css
@@ -8,7 +8,7 @@ a {
   text-decoration: none;
 }
 
-p { 
+p {
   margin: 0%;
 }
 
@@ -33,7 +33,6 @@ p {
 }
 
 .navbar_frame .container {
-
   padding: 20px 0px 14px;
   height: auto;
   flex-direction: column;
@@ -225,14 +224,12 @@ p {
   border-top: 1px solid #5746a1;
 }
 
-
-.navbar_frame .navbar_bott .navbar_bott_menu_box{
+.navbar_frame .navbar_bott .navbar_bott_menu_box {
   width: auto;
   height: auto;
 
   display: flex;
   flex-direction: row;
-
 }
 
 .navbar_frame .navbar_bott_menu_box .browse_box {
@@ -261,9 +258,8 @@ p {
   color: #ffffff;
 }
 
-
 .navbar_frame .navbar_bott_menu_box .navbar_route_menu {
-  margin-top: 10px ;
+  margin-top: 10px;
   width: 690px;
   margin-left: 12px;
   display: flex;
@@ -271,13 +267,12 @@ p {
 }
 
 .navbar_frame .navbar_route_menu .router_menu {
-  margin-right:20px;
+  margin-right: 20px;
   width: auto;
   height: 41px;
 
   display: flex;
 }
-
 
 .navbar_frame .router_menu a {
   font-family: "Jost", sans-serif;
@@ -296,9 +291,6 @@ p {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
-
-  
-
 }
 
 .navbar_frame .sorting_menu span {
@@ -310,4 +302,225 @@ p {
   line-height: 28px;
   text-align: right;
   color: #ffffff;
+}
+
+/* FOOTER */
+
+.footer_frame {
+  position: relative;
+  padding: 90px 0 20px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  background: #f3f5f6;
+}
+
+.footer_frame .container {
+  flex-direction: column;
+}
+
+.footer_frame .footer_spec_title {
+  display: block;
+  margin-bottom: 30px;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  font-weight: bold;
+}
+
+.footer_frame .container .footer_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_top .footer_contant_box {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contant_box .footer_contact_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_contact_main img {
+  width: 35px;
+  height: 30px;
+}
+
+.footer_frame .footer_contact_main div {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contact_main div strong {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+  font-weight: bold;
+}
+
+.footer_frame .footer_contact_main div span {
+  margin-top: 10px;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.footer_frame .footer_support_box {
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_support_box a {
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_media_box {
+  margin-left: 55px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_box .footer_media_main {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_main .media_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .media_box i {
+  margin-right: 25px;
+}
+
+.footer_frame .footer_media_main .mobile_app_box {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.footer_frame .mobile_app_box img {
+  width: 24px;
+  height: 16px;
+}
+
+.footer_frame .mobile_app_box span {
+  margin-left: 20px;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.footer_frame .footer_media_main .card_box {
+  width: 272px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .container .footer_bottom {
+  margin-top: 90px;
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-top: 1px solid #aeaeae;
+}
+
+.footer_frame .footer_bottom .footer_main {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_main .footer_bottom_left {
+  width: 940px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_bottom_left span {
+  margin-right: 60px;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_main .footer_bottom_right {
+  width: 400px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .footer_bottom_right .footer_select_box {
+  padding: 10px 20px;
+  width: 180px;
+  height: 40px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background: #ffffff;
+  border: 1px solid #aeaeae;
+  border-radius: 6px;
+  box-sizing: border-box;
+}
+
+.footer_frame .footer_select_box span {
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_select_box select {
+  margin-left: 20px;
+  width: 70px;
+  height: 90%;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: rgb(4, 30, 66);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
 }
