--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 .home_page {
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
   display: flex;
   flex-direction: column;
 }
@@ -845,6 +845,7 @@
   justify-content: center;
 
   background-image: url(../images/icons/event_bg.png);
+  background-size: cover;
 }
 
 .event_frame .container {
