--- a/public/css/home.css
+++ b/public/css/home.css
@@ -491,6 +491,89 @@
   flex-direction: column;
 }
 
+.shop_category_frame .category_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.shop_category_frame .category_box {
+  width: 142px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.shop_category_frame .category_img_box {
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid #eaeaea;
+  border-radius: 150px;
+}
+
+.shop_category_frame .category_box span {
+  margin-top: 15px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: #041e42;
+  text-align: center;
+}
+.shop_category_frame .category_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.shop_category_frame .category_box {
+  width: 142px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.shop_category_frame .category_img_box {
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid #eaeaea;
+  border-radius: 150px;
+}
+
+.shop_category_frame .category_box span {
+  margin-top: 15px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: #041e42;
+  text-align: center;
+}
+
 .shop_category_frame .container .category_top {
   width: 100%;
   height: auto;
@@ -520,48 +603,6 @@
 
 .shop_category_frame .category_top a:hover {
   border-bottom: 2px solid #041e42;
-}
-
-.shop_category_frame .container .category_wrapper {
-  margin-top: 30px;
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.shop_category_frame .category_wrapper .category_box {
-  width: 142px;
-  height: auto;
-
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.shop_category_frame .category_box .category_img_box {
-  width: 100%;
-  height: 150px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  border: 1px solid #eaeaea;
-  border-radius: 150px;
-}
-
-.shop_category_frame .category_box span {
-  margin-top: 15px;
-  font-family: var(--font);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-  color: #041e42;
-  text-align: center;
 }
 
 /* SELLING PRODUCS */
