--- a/public/css/product_all.css
+++ b/public/css/product_all.css
@@ -116,6 +116,44 @@
   text-decoration: line-through;
   color: #041e42;
 }
+.container .tv_wrapper {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+}
+
+.tv_product_box .product_img {
+  width: 100px;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
@@ -600,7 +638,6 @@
 
 .laptops_accessories .container {
   flex-direction: column;
-
 }
 
 .laptops_accessories strong {
@@ -641,10 +678,8 @@
 }
 
 .shop_page_frame .product_type_box .container .select_box {
-
   width: 70px;
   display: flex;
-  
 }
 
 .shop_page_frame .product_type_box .container .select_box select {
@@ -657,4 +692,171 @@
   border-radius: 60px;
 
   background: rgb(243, 245, 246);
+}
+
+.shop_page_frame .laptops_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.laptops_box .container {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.laptops_box .container .laptop_wrapper {
+  width: 263px;
+  height: 463px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  box-sizing: border-box;
+
+  border: 1px solid rgb(234, 234, 234);
+}
+
+.laptop_wrapper .laptop_box_info {
+  width: 225px;
+  height: 148px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.laptop_box_info span {
+  color: rgb(98, 105, 116);
+  font-family: var(--font);
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.laptop_box_info strong {
+  color: rgb(4, 30, 66);
+  font-family: var(--font);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: left;
+  font-weight: bold;
+}
+
+.laptop_wrapper .laptop_review_box {
+  width: 224px;
+  height: 10px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.laptop_wrapper .laptop_review_box img {
+  margin-right: 8px;
+}
+
+.laptop_wrapper .laptop_review_box span {
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.laptop_wrapper .laptop_price_box {
+  width: 221px;
+  margin-top: 10px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.laptop_price_box strong {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #041e42;
+}
+
+.laptop_price_box span {
+  margin-left: 10px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration: line-through;
+  color: #041e42;
+}
+
+/* Laptop Pegination box */
+
+.shop_page_frame .laptop_pegination_box {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.laptop_pegination_box .container {
+  flex-direction: column;
+  align-items: center;
+}
+
+.laptop_pegination_box .container .number_box {
+  
+  width: 460px;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.laptop_pegination_box .container .number_box img {
+  padding: 8px;
+  box-sizing: border-box;
+
+  border: 1px solid rgb(234, 234, 234);
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+}
+
+.laptop_pegination_box .container .number_box img:hover {
+  background: #f5c34b;
+}
+
+.laptop_pegination_box .container .number_box span {
+  padding: 10px;
+  box-sizing: border-box;
+
+  border: 1px solid rgb(234, 234, 234);
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+}
+
+.laptop_pegination_box .container .number_box span:hover {
+  background: #f5c34b;
 }
